--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Kim Young Chan
+subtitle: 멈추지 말고 성장하자! | Embedded Software Programmer
 bigimg: /img/Home.jpg
 use-site-title: true
 ---
