--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: page
 title: Kim Young Chan
 subtitle: 멈추지 말고 성장하자! | Embedded Software Programmer
 bigimg: /img/Home.jpg
+bigimg: /img/Home2.jpg
 use-site-title: true
 ---
 
