--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 layout: page
 title: Kim Young Chan
 subtitle: 멈추지 말고 성장하자! | Embedded Software Programmer
-bigimg: /img/Home.jpg
-bigimg: /img/Home2.jpg
+bigimg: 
+  - "/img/Home.jpg" : "intro1"
+  - "/img/Home2.jpg " : "intro2" 
 use-site-title: true
 ---
 
