--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: page
 title: Kim Young Chan
 subtitle: 멈추지 말고 성장하자! | Embedded Software Programmer
 bigimg: 
-  - "/img/Home.jpg" : "intro1"
-  - "/img/Home2.jpg " : "intro2" 
+  - /img/Home.jpg
+  - /img/Home2.jpg
 use-site-title: true
 ---
 
