index.html table update

--- a/index.html
+++ b/index.html
@@ -2,23 +2,44 @@
 layout: page
 title: Kim Young Chan
 subtitle: 멈추지 말고 성장하자! | Embedded Software Programmer
-bigimg: 
+bigimg:
   - /img/Home.jpg
   - /img/Home2.jpg
 use-site-title: true
 ---
 
 <div class ="test">
+  <h1>🗃 KETI</h1>
   <table width="100%">
     <tr>
-      <td>가라다라마</td>
-      <td>123</td>
-      <td>8520</td>
+      <td>KETI_MR</td>
+      <td>2019</td>
+      <td>Mixed Reality</td>
+      <td><href="#">REF</td>
     </tr>
     <tr>
-      <td>가라다라마</td>
-      <td>456</td>
-      <td>123123</td>
+      <td>KETI_NURO</td>
+      <td>2019</td>
+      <td>Neuromorphic</td>
+      <td><href="#">REF</td>
+    </tr>
+    <tr>
+      <td>KAU_HL</td>
+      <td>2019</td>
+      <td>Private BlockChain</td>
+      <td><a href="https://github.com/KimYC1223/Hyperledger_PCtoRASP">REF</a></td>
+    </tr>
+    <tr>
+      <td>KAU_HW</td>
+      <td>2018</td>
+      <td>Hardware Design</td>
+      <td><a href="https://github.com/KimYC1223/KAU_HW_2018">REF</a></td>
+    </tr>
+    <tr>
+      <td>KAU_Embedded</td>
+      <td>2019</td>
+      <td>Hardware Design</td>
+      <td><a href="https://github.com/KimYC1223/KAU_EMBEDED_19">REF</a></td>
     </tr>
   </table>
 </div>
