index.html table update

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@ use-site-title: true
 ---
 
 <div class ="test">
-  <h1>🗃 KETI</h1>
+  <h1>🗃 프로젝트</h1>
   <table width="100%">
     <tr>
       <td>KETI_MR</td>
       <td>2019</td>
       <td>Mixed Reality</td>
-      <td><href="#">REF</td>
+      <td><a href="#">REF</a></td>
     </tr>
     <tr>
       <td>KETI_NURO</td>
       <td>2019</td>
       <td>Neuromorphic</td>
-      <td><href="#">REF</td>
+      <td><a href="#">REF</a></td>
     </tr>
     <tr>
       <td>KAU_HL</td>
