MR post 001 update

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ use-site-title: true
       <td><a href="#">REF</a></td>
     </tr>
     <tr>
-      <td>KETI_NURO</td>
+      <td>KETI_Neuromorphic</td>
       <td>2019</td>
       <td>Neuromorphic</td>
       <td><a href="#">REF</a></td>
     </tr>
     <tr>
-      <td>KAU_HL</td>
+      <td>KAU_HyperLedger</td>
       <td>2019</td>
       <td>Private BlockChain</td>
       <td><a href="https://github.com/KimYC1223/Hyperledger_PCtoRASP">REF</a></td>
