--- a/index.html
+++ b/index.html
@@ -12,33 +12,28 @@ use-site-title: true
   <h1>🗃  프로젝트</h1>
   <table width="100%">
     <tr>
-      <td>KETI_MR</td>
+      <td>KETI_MixedReality</td>
       <td>2019</td>
-      <td>Mixed Reality</td>
-      <td><a href="#">REF</a></td>
+      <td><a href="#">Private Git</a></td>
     </tr>
     <tr>
       <td>KETI_Neuromorphic</td>
       <td>2019</td>
-      <td>Neuromorphic</td>
-      <td><a href="#">REF</a></td>
-    </tr>
+      <td><a href="#">Private Git</a></td>
+    </tr> s
     <tr>
       <td>KAU_HyperLedger</td>
       <td>2019</td>
-      <td>Private BlockChain</td>
       <td><a href="https://github.com/KimYC1223/Hyperledger_PCtoRASP">REF</a></td>
     </tr>
     <tr>
-      <td>KAU_HW</td>
+      <td>KAU_H.W. Design</td>
       <td>2018</td>
-      <td>Hardware Design</td>
       <td><a href="https://github.com/KimYC1223/KAU_HW_2018">REF</a></td>
     </tr>
     <tr>
       <td>KAU_Embedded</td>
       <td>2019</td>
-      <td>Hardware Design</td>
       <td><a href="https://github.com/KimYC1223/KAU_EMBEDED_19">REF</a></td>
     </tr>
   </table>
