--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ use-site-title: true
 
 <div class ="test">
   <img src="/img/logo1.png" style="width:100%;min-width: 384px;max-width: 460px;">
-  <br>
+  <br><br><font size="2"> </font>
   <table width="100%">
     <tr>
       <td>KETI_MixedReality</td>
