update about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,144 +4,73 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/aboutMe.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+  <title>About Me</title>
 </head>
-<body width="100%">
-  <table width="100%">
-    <tr width="100%">
-      <td width="40%" height ="400px" style = "
-      background-image:url(/img/MyPicture.png);
-      background-size: cover;
-      background-position: 50% 50%;
-      background-repeat: no-repeat;">
-      </td>
-      <td width="60%" height="400px">
-        <font size="5">김영찬</font> <font color="#4d4d4d">Kim YoungChan</font><br>
-        <table>
-          <tr><td>JOB</td><td>Embedded SW Assistant Researcher</td></tr>
-          <tr><td>Nation</td><td>🇰🇷 South Korea</td></tr>
-          <tr><td>Email</td>
-              <td>
-                <ul>
-                  <li>kau_esc@naver.com (personal) </li>
-                  <li>kimyc1223@keti.re.kr (official) </li>
-                </ul>
-              </td>
-          </tr>
-          <tr><td>Phone</td><td>+8210-9357-8504</td></tr>
-          <tr><td>Office</td><td>#22, Daewangpangyo-ro 712 beon-gil, Bundang-gu, Seongnam-si, Gyeonggi-do, 13488, Korea</td></tr>
-          <tr><td>GitHub</td><td>https://github.com/KimYC1223</td></tr>
-        </table>
-      </td>
-    </tr>
-  <table>
+<body>
+<div class="header">
+  <div class="homeBtn">
+    <a href="http://KimYC1223.github.io">ABOUT ME</a>
+  </div>
+</div>
+<div class="bodyDiv">
+  <div class="bodybody">
+    <table width="100%" class="firstTable">
+      <tr>
+        <td width="40%">
+          <div class="MyPicture">
+            <img src="./img/MyPicture.png" class="pngPicture">
+          </div>
+        </td>
+        <td align="right">
+          <table class="profile">
+            <tr><td colspan="2" class="title"><font size="6">김영찬</font> <font color="#cbcbcb">Kim YoungChan</font><br></td></tr>
+            <tr><td class="type">JOB</td><td>Embedded SW Assistant Researcher</td></tr>
+            <tr><td class="type">Nation</td><td>🇰🇷 &nbsp; South Korea</td></tr>
+            <tr><td class="type">Email</td>
+                <td>
+                  kau_esc@naver.com (personal)
+                  kimyc1223@keti.re.kr (official)
+                </td>
+            </tr>
+            <tr><td class="type">Phone</td><td>+8210-9357-8504</td></tr>
+            <tr><td class="type">Office</td><td>#22, Daewangpangyo-ro 712 beon-gil, Bundang-gu, Seongnam-si, Gyeonggi-do, 13488, Korea</td></tr>
+            <tr><td class="type">GitHub</td><td>https://github.com/KimYC1223</td></tr>
+          </table>
 
-  <br><br>
+        </td>
+      </tr>
+    </table>
 
-  <h1>SKILLS</h1>
+    <hr/>
+    <h1><i class="fas fa-stopwatch">&nbsp;&nbsp;</i>TIME LINE</h1>
 
-  <table width="100%">
-    <tr height="30px" align="center">
-      <td width="10%"><img src="./img/icon/C.png"></td>
-      <td align="center" width="15%">C</td>
-      <td align="center" width="85%">
-        <table width="100%"><tr style="border:none;">
-            <td width="85%" height="4px"  bgcolor="#222c8c"></td>
-            <td height="4px" bgcolor="#c0c3e4"></td>
-        </tr></table>
-      </td>
-    </tr>
-    <tr height="30px" align="center">
-      <td width="10%"><img src="./img/icon/CS.png"></td>
-      <td align="center" width="15%">C#</td>
-      <td align="center" width="85%">
-        <table width="100%"><tr style="border:none;">
-            <td width="95%" height="4px"  bgcolor="#222c8c"></td>
-            <td height="4px" bgcolor="#c0c3e4"></td>
-        </tr></table>
-      </td>
-    </tr>
-    <tr height="30px" align="center">
-      <td width="10%"><img src="./img/icon/Java.png"></td>
-      <td align="center" width="15%">Java</td>
-      <td align="center" width="85%">
-        <table width="100%"><tr style="border:none;">
-            <td width="75%" height="4px"  bgcolor="#222c8c"></td>
-            <td height="4px" bgcolor="#c0c3e4"></td>
-        </tr></table>
-      </td>
-    </tr>
-    <tr height="30px" align="center">
-      <td width="10%"><img src="./img/icon/Javascript.png"></td>
-      <td align="center" width="15%">Javascript</td>
-      <td align="center" width="85%">
-        <table width="100%"><tr style="border:none;">
-            <td width="65%" height="4px"  bgcolor="#222c8c"></td>
-            <td height="4px" bgcolor="#c0c3e4"></td>
-        </tr></table>
-      </td>
-    </tr>
-    <tr height="30px" align="center">
-      <td width="10%"><img src="./img/icon/Python.png"></td>
-      <td align="center" width="15%">Python</td>
-      <td align="center" width="85%">
-        <table width="100%"><tr style="border:none;">
-            <td width="35%" height="4px"  bgcolor="#222c8c"></td>
-            <td height="4px" bgcolor="#c0c3e4"></td>
-        </tr></table>
-      </td>
-    </tr>
-    <tr height="30px" align="center">
-      <td width="10%"><img src="./img/icon/Verilog.png"></td>
-      <td align="center" width="15%">Verilog</td>
-      <td align="center" width="85%">
-        <table width="100%"><tr style="border:none;">
-            <td width="65%" height="4px"  bgcolor="#222c8c"></td>
-            <td height="4px" bgcolor="#c0c3e4"></td>
-        </tr></table>
-      </td>
-    </tr>
-    <tr height="30px" align="center">
-      <td width="10%"><img src="./img/icon/SQL.png"></td>
-      <td align="center" width="15%">SQL</td>
-      <td align="center" width="55%">
-        <table width="100%"><tr style="border:none;">
-            <td width="65%" height="4px"  bgcolor="#222c8c"></td>
-            <td height="4px" bgcolor="#c0c3e4"></td>
-        </tr></table>
-      </td>
-    </tr>
-    <tr height="30px" align="center">
-      <td width="10%"><img src="./img/icon/PHP.png"></td>
-      <td align="center" width="15%">PHP</td>
-      <td align="center" width="55%">
-        <table width="100%"><tr style="border:none;">
-            <td width="65%" height="4px"  bgcolor="#222c8c"></td>
-            <td height="4px" bgcolor="#c0c3e4"></td>
-        </tr></table>
-      </td>
-    </tr>
-    <tr height="30px" align="center">
-      <td width="10%"><img src="./img/icon/HTML.png"></td>
-      <td align="center" width="15%">HTML</td>
-      <td align="center" width="55%">
-        <table width="100%"><tr style="border:none;">
-            <td width="98%" height="4px"  bgcolor="#222c8c"></td>
-            <td height="4px" bgcolor="#c0c3e4"></td>
-        </tr></table>
-      </td>
-    </tr>
-    <tr height="30px" align="center">
-      <td width="10%"><img src="./img/icon/SQL.png"></td>
-      <td align="center" width="15%">CSS</td>
-      <td align="center" width="55%">
-        <table width="100%"><tr style="border:none;">
-            <td width="65%" height="4px"  bgcolor="#222c8c"></td>
-            <td height="4px" bgcolor="#c0c3e4"></td>
-        </tr></table>
-      </td>
-    </tr>
-  </table>
+    <table class="timeLineTable">
+      <tr height="100px">
+        <td class="button"><div><img src="./img/Icon/icon01.png"/></div></td>
+        <td><div class="timeLineLink"/></div></td>
+        <td class="button"><div><img src="./img/Icon/icon02.png"/></div></td>
+        <td><div class="timeLineLink"/></div></td>
+        <td class="button"><div><img src="./img/Icon/icon01.png"/></div></td>
+        <td><div class="timeLineLink"/></div></td>
+        <td class="button"><div><img src="./img/Icon/icon03.png"/></div></td>
+        <td><div class="timeLineLink"/></div></td>
+        <td class="button"><div><img src="./img/Icon/icon04.png"/></div></td>
+      </tr>
+    </table>
 
+    <table class="timeLineDetail">
+      <tr>
+        <td>
+
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
+<div class="footer">
+
+</div>
 </body>
 </html>
