update about me .md

--- a/aboutme.html
+++ b/aboutme.html
@@ -62,8 +62,24 @@
 
     <table class="timeLineDetail">
       <tr>
-        <td>
+        <td colspan="2" width="100%">
+        </td>
+      </tr>
+      <tr>
+        <td width="128px"><img src="./img/Icon/icon_R_01.png" class="detailImage"></td>
+        <td class="detailText" align="left">
+          <detailTitleText>한국항공대학교 학사 입학</detailTitleText><br />
+          <detailEnglish>Entered BS, Korea Aerospace University</detailEnglish><br />
+          <detailTimeText>March 2013</detailTimeText>
+        </td>
+      </tr>
 
+      <tr class="timeLineTR">
+        <td width="128px"><img src="./img/Icon/icon_R_01.png" class="detailImage"></td>
+        <td class="detailText" align="left">
+          <detailTitleText>한국항공대학교 학사 입학</detailTitleText><br />
+          <detailEnglish>Entered BS, Korea Aerospace University</detailEnglish><br />
+          <detailTimeText>March 2013</detailTimeText>
         </td>
       </tr>
     </table>
