Masive Update AboutMe.md

--- a/aboutme.html
+++ b/aboutme.html
@@ -5,14 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/aboutMe.css">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
   <title>About Me</title>
 </head>
 <body>
 <div class="header">
-  <div class="homeBtn">
-    <a href="http://KimYC1223.github.io">ABOUT ME</a>
-  </div>
+  <table class="headerTable">
+    <tr>
+      <td width="100px"><a href="javascript:history.go(-1)"><i class="fas fa-chevron-left"></i></a></td>
+      <td><a href="http://KimYC1223.github.io" class="homeBtn">ABOUT ME</a></td>
+      <td width="100px"></td>
+    </tr>
+  </table>
 </div>
 <div class="bodyDiv">
   <div class="bodybody">
@@ -35,13 +40,144 @@
                 </td>
             </tr>
             <tr><td class="type">Phone</td><td>+8210-9357-8504</td></tr>
-            <tr><td class="type">Office</td><td>#22, Daewangpangyo-ro 712 beon-gil, Bundang-gu, Seongnam-si, Gyeonggi-do, 13488, Korea</td></tr>
+            <tr><td class="type">Office</td><td>#22, Daewangpangyo-ro 712 beon-gil, Bundang-gu, Seongnam-si,<br />Gyeonggi-do, 13488, Korea</td></tr>
             <tr><td class="type">GitHub</td><td>https://github.com/KimYC1223</td></tr>
           </table>
 
         </td>
       </tr>
     </table>
+
+    <hr/>
+    <h1><i class="fas fa-magic"></i>&nbsp;&nbsp;</i>ABILITY</h1>
+
+    <table class="abilityTable">
+      <tr height="200px">
+
+        <td width="20%"><div class="abilityDiv"><div class="abilityDivInner">
+          <img src="./img/ability/c.png" class="abilityImg"/><br />
+          <span class="abilityName">C Language</span>
+          <div class="hiddenTable">
+            C언어 숙련도 85%
+          <table align="left" class="proc" width="135px"><tr width="100%" class="abilityTRTD">
+            <td width="85%" align="left" class="abilityTRTD"><div class="progressBar">　</div></td>
+          <td class="abilityTRTD"></td></tr></table></div></div></div>
+        </td>
+
+        <td width="20%"><div class="abilityDiv"><div class="abilityDivInner">
+          <img src="./img/ability/cs.png" class="abilityImg"/><br />
+          <span class="abilityName">C #</span>
+          <div class="hiddenTable">
+            C # 숙련도 90%
+          <table align="left" class="proc" width="135px"><tr width="100%" class="abilityTRTD">
+            <td width="90%" align="left" class="abilityTRTD"><div class="progressBar">　</div></td>
+          <td class="abilityTRTD"></td></tr></table></div></div></div>
+        </td>
+
+        <td width="20%"><div class="abilityDiv"><div class="abilityDivInner">
+          <img src="./img/ability/java.png" class="abilityImg"/><br />
+          <span class="abilityName">Java</span>
+          <div class="hiddenTable">
+            Java 숙련도 80%
+          <table align="left" class="proc" width="135px"><tr width="100%" class="abilityTRTD">
+            <td width="80%" align="left" class="abilityTRTD"><div class="progressBar">　</div></td>
+          <td class="abilityTRTD"></td></tr></table></div></div></div>
+        </td>
+
+        <td width="20%"><div class="abilityDiv"><div class="abilityDivInner">
+          <img src="./img/ability/python.png" class="abilityImg"/><br />
+          <span class="abilityName">Python</span>
+          <div class="hiddenTable">
+            Python 숙련도 40%
+          <table align="left" class="proc" width="135px"><tr width="100%" class="abilityTRTD">
+            <td width="40%" align="left" class="abilityTRTD"><div class="progressBar">　</div></td>
+          <td class="abilityTRTD"></td></tr></table></div></div></div>
+        </td>
+
+        <td width="20%"><div class="abilityDiv"><div class="abilityDivInner">
+          <img src="./img/ability/verilog.png" class="abilityImg"/><br />
+          <span class="abilityName">Verilog HDL</span>
+          <div class="hiddenTable">
+            Verilog 숙련도 65%
+          <table align="left" class="proc" width="135px"><tr width="100%" class="abilityTRTD">
+            <td width="65%" align="left" class="abilityTRTD"><div class="progressBar">　</div></td>
+          <td class="abilityTRTD"></td></tr></table></div></div></div>
+        </td>
+
+      </tr>
+      <tr height="200px">
+
+        <td width="20%"><div class="abilityDiv"><div class="abilityDivInner">
+          <img src="./img/ability/html.png" class="abilityImg"/><br />
+          <span class="abilityName">HTML</span>
+          <div class="hiddenTable">
+            HTML 숙련도 95%
+          <table align="left" class="proc" width="135px"><tr width="100%" class="abilityTRTD">
+            <td width="95%" align="left" class="abilityTRTD"><div class="progressBar">　</div></td>
+          <td class="abilityTRTD"></td></tr></table></div></div></div>
+        </td>
+
+        <td width="20%"><div class="abilityDiv"><div class="abilityDivInner">
+          <img src="./img/ability/css.png" class="abilityImg"/><br />
+          <span class="abilityName">CSS</span>
+          <div class="hiddenTable">
+            CSS 숙련도 85%
+          <table align="left" class="proc" width="135px"><tr width="100%" class="abilityTRTD">
+            <td width="85%" align="left" class="abilityTRTD"><div class="progressBar">　</div></td>
+          <td class="abilityTRTD"></td></tr></table></div></div></div>
+        </td>
+
+        <td width="20%"><div class="abilityDiv"><div class="abilityDivInner">
+          <img src="./img/ability/javascript.png" class="abilityImg"/><br />
+          <span class="abilityName">Javascript</span>
+          <div class="hiddenTable">
+            Javascript 숙련도 75%
+          <table align="left" class="proc" width="135px"><tr width="100%" class="abilityTRTD">
+            <td width="75%" align="left" class="abilityTRTD"><div class="progressBar">　</div></td>
+          <td class="abilityTRTD"></td></tr></table></div></div></div>
+        </td>
+
+        <td width="20%"><div class="abilityDiv"><div class="abilityDivInner">
+          <img src="./img/ability/php.png" class="abilityImg"/><br />
+          <span class="abilityName">PHP</span>
+          <div class="hiddenTable">
+            PHP 숙련도 75%
+          <table align="left" class="proc" width="135px"><tr width="100%" class="abilityTRTD">
+            <td width="75%" align="left" class="abilityTRTD"><div class="progressBar">　</div></td>
+          <td class="abilityTRTD"></td></tr></table></div></div></div>
+        </td>
+
+        <td width="20%"><div class="abilityDiv"><div class="abilityDivInner">
+          <img src="./img/ability/SQL.png" class="abilityImg"/><br />
+          <span class="abilityName">SQL</span>
+          <div class="hiddenTable">
+            SQL 숙련도 70%
+          <table align="left" class="proc" width="135px"><tr width="100%" class="abilityTRTD">
+            <td width="70%" align="left" class="abilityTRTD"><div class="progressBar">　</div></td>
+          <td class="abilityTRTD"></td></tr></table></div></div></div>
+        </td>
+
+      </tr>
+
+    </table>
+
+    <hr/>
+    <h1><i class="fas fa-tools"></i>&nbsp;&nbsp;</i>USEABLE TOOLS</h1>
+
+    <div class="toolsDiv">
+      <div class="toolsDivInner">
+        <div class="toolItem">UNITY</div>
+        <div class="toolItem">ARDUINO</div>
+        <div class="toolItem">TENSOR<br />FLOW</div>
+        <div class="toolItem">NODE JS</div>
+        <div class="toolItem">ANGULAR JS</div>
+        <div class="toolItem">3DS MAX</div>
+        <div class="toolItem">GIT</div>
+        <div class="toolItem">VISUAL STUDIO</div>
+        <div class="toolItem">LINUX</div>
+        <div class="toolItem">ROS</div>
+      </div>
+    </div>
 
     <hr/>
     <h1><i class="fas fa-stopwatch">&nbsp;&nbsp;</i>TIME LINE</h1>
@@ -52,34 +188,66 @@
         <td><div class="timeLineLink"/></div></td>
         <td class="button"><div><img src="./img/Icon/icon02.png"/></div></td>
         <td><div class="timeLineLink"/></div></td>
-        <td class="button"><div><img src="./img/Icon/icon01.png"/></div></td>
-        <td><div class="timeLineLink"/></div></td>
         <td class="button"><div><img src="./img/Icon/icon03.png"/></div></td>
         <td><div class="timeLineLink"/></div></td>
         <td class="button"><div><img src="./img/Icon/icon04.png"/></div></td>
+        <td><div class="timeLineLink"/></div></td>
+        <td class="button"><div><img src="./img/Icon/icon05.png"/></div></td>
       </tr>
     </table>
 
     <table class="timeLineDetail">
       <tr>
-        <td colspan="2" width="100%">
+        <td colspan="3" width="100%">
         </td>
       </tr>
       <tr>
+        <td width="12px"></td>
         <td width="128px"><img src="./img/Icon/icon_R_01.png" class="detailImage"></td>
         <td class="detailText" align="left">
-          <detailTitleText>한국항공대학교 학사 입학</detailTitleText><br />
-          <detailEnglish>Entered BS, Korea Aerospace University</detailEnglish><br />
-          <detailTimeText>March 2013</detailTimeText>
+          <detailTitleText>한국항공대학교 전자공학 학사</detailTitleText>
+          <detailText>Bachelor of Science in Electronics at Korea Aerospace University</detailText>
+          <detailText>March 2013 - February 2020</detailText>
         </td>
       </tr>
 
       <tr class="timeLineTR">
-        <td width="128px"><img src="./img/Icon/icon_R_01.png" class="detailImage"></td>
+        <td width="12px"></td>
+        <td width="128px"><img src="./img/Icon/icon_R_02.png" class="detailImage"></td>
         <td class="detailText" align="left">
-          <detailTitleText>한국항공대학교 학사 입학</detailTitleText><br />
-          <detailEnglish>Entered BS, Korea Aerospace University</detailEnglish><br />
-          <detailTimeText>March 2013</detailTimeText>
+          <detailTitleText>항공대 중앙 학술 동아리 E.S.C. 35기 회장</detailTitleText>
+          <detailText>Academic Circle 'Electronic-Circuit Study Circle' 35th President</detailText>
+          <detailText>December 2013 - December 2014</detailText>
+        </td>
+      </tr>
+
+      <tr class="timeLineTR">
+        <td width="12px"></td>
+        <td width="128px"><img src="./img/Icon/icon_R_03.png" class="detailImage"></td>
+        <td class="detailText" align="left">
+          <detailTitleText>3군사령부 통신단 63통신운용대대 전역</detailTitleText>
+          <detailText>3rd Army Command 63 Communications Operations Battalion</detailText>
+          <detailText>November 2015 - August 2017</detailText>
+        </td>
+      </tr>
+
+      <tr class="timeLineTR">
+        <td width="12px"></td>
+        <td width="128px"><img src="./img/Icon/icon_R_04.png" class="detailImage"></td>
+        <td class="detailText" align="left">
+          <detailTitleText>전자부품연구원 SW 연구원 입사</detailTitleText>
+          <detailText>Joined as a researcher at Korea Electronics Technology Institute</detailText>
+          <detailText>September 2018 - Today </detailText>
+        </td>
+      </tr>
+
+      <tr class="timeLineTR">
+        <td width="12px"></td>
+        <td width="128px"><img src="./img/Icon/icon_R_05.png" class="detailImage"></td>
+        <td class="detailText" align="left">
+          <detailTitleText>연세대학교 컴퓨터 과학과 석사</detailTitleText>
+          <detailText>Master of Science in Computer Science at YonSei University</detailText>
+          <detailText>March 2020 - Today </detailText>
         </td>
       </tr>
     </table>
