--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ subtitle: 멈추지 말고 성장하자! | Embedded Software Programmer
 bigimg:
   - /img/Home.jpg
   - /img/Home2.jpg
+  - /img/Home3.jpg
+  - /img/Home4.jpg
 use-site-title: true
 ---
 
